feat: download-track add
